--- a/01-basics/03-MarkedList/index.html
+++ b/01-basics/03-MarkedList/index.html
@@ -14,14 +14,13 @@
     <div id="app" style="margin-top: 2rem">
       <div class="container">
         <div class="form-group">
-          <input type="search" />
+          <input v-model.trim="filter.search" type="search" />
         </div>
-        <ul>
-          <li>Email</li>
-          <li class="marked">Email</li>
-          <li>...</li>
-          <li>Email</li>
-        </ul>
+        <template v-if="emails">
+          <ul>
+            <li v-for="email in filteredEmails" :class="email.class">{{ email.address }}</li>
+          </ul>
+        </template>
       </div>
     </div>
 
